[gd_scene load_steps=3 format=3 uid="uid://cutscene_player_scene"]

[ext_resource type="Script" path="res://scripts/cutscenes/CutscenePlayer.gd" id="1_cutscene"]
[ext_resource type="PackedScene" path="res://scenes/ui/dialogue/DialogueUI.tscn" id="2_dialogue"]

[node name="CutscenePlayer" type="Control" groups=["cutscene_player"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_cutscene")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 5

[node name="CharacterPortraits" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftPortrait" type="TextureRect" parent="CharacterPortraits"]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.4
anchor_bottom = 0.9
expand_mode = 1
stretch_mode = 5

[node name="RightPortrait" type="TextureRect" parent="CharacterPortraits"]
layout_mode = 0
anchor_left = 0.6
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.9
expand_mode = 1
stretch_mode = 5

[node name="DialogueUI" parent="." instance=ExtResource("2_dialogue")]

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
z_index = 100

[node name="SkipPrompt" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.85
anchor_top = 0.05
anchor_right = 0.98
anchor_bottom = 0.1
text = "Press ESC to skip"
horizontal_alignment = 2
vertical_alignment = 1
z_index = 50 